bigger color buttons

--- a/resources/sass/.arch-internal-preview.scss
+++ b/resources/sass/.arch-internal-preview.scss
@@ -47,8 +47,8 @@ $md-shadow-floating: 0 0.1em 0.5em rgba(0,0,0,0.4);
 
 /********** THEME SETTINGS **********/
 
-$my-theme: 'dark';
-$my-fields-theme: 'dark';
+$my-theme: 'light';
+$my-fields-theme: 'light';
 
 /* LIGHT THEME */
 $my-base-color: $white;
